Little improvements for the demo
1. Add plain auth for the influxdb output
2. Support new message format for kafka-input
3. Add safe wrapper for pcall

--- a/run/output/debug.cfg
+++ b/run/output/debug.cfg
@@ -1,3 +1,3 @@
 filename = "debug.lua"
-message_matcher = "Fields[payload_name] == 'ceilometer1' || Type == '1ceilometer_samples'"
+message_matcher = "Fields[payload_name] == 'ceilometer' || Type == 'ceilometer_samples' || Type == 'debug'"
 -- message_matcher = "Type == 'ceilometer_samples'"
