--- a/run/input/ceilometer_kafka.cfg
+++ b/run/input/ceilometer_kafka.cfg
@@ -1,9 +1,11 @@
 filename = "ceilometer_kafka.lua"                              
-brokerlist = "172.18.78.17:9092"
+brokerlist = "place_for_brokerlist"
 topics = {"metering.sample"}
 consumer_conf = {
     ["group.id"] = "metric_collector",
-    ["message.max.bytes"] = 10024,
+    ["message.max.bytes"] = 16024,
 }
 topic_conf = {}
 metadata_fields = "display_name name instance_type user_metadata.stack_id"
+instuctions_limit = 0
+ticker_interval = 60
