--- a/run/output/influxdb_ceilometer.cfg
+++ b/run/output/influxdb_ceilometer.cfg
@@ -1,7 +1,9 @@
 filename = "influxdb_tcp.lua"
-host = "172.18.78.17"
+host = "place_for_host"
 port = 8086
 database = "ceilometer"
+username = "root"
+password = "lmapass"
 batch_max_lines = 20000
 message_matcher = "Fields[payload_name] == 'ceilometer'"
 ticker_interval = 1
