Final preparations for the demo

--- a/run/input/ceilometer_kafka.cfg
+++ b/run/input/ceilometer_kafka.cfg
@@ -6,6 +6,6 @@ consumer_conf = {
     ["message.max.bytes"] = 16024,
 }
 topic_conf = {}
-metadata_fields = "display_name name instance_type user_metadata.stack_id"
-instuctions_limit = 0
+metadata_fields = "instance_host display_name name instance_type user_metadata.stack user_metadata.stack_name"
+instuction_limit = 0 
 ticker_interval = 60
