--- a/run/output/debug.cfg
+++ b/run/output/debug.cfg
@@ -1,3 +1,4 @@
 filename = "debug.lua"
-message_matcher = "Fields[payload_name] == 'ceilometer' || Type == 'ceilometer_samples' || Type == 'debug'"
+-- message_matcher = "Fields[payload_name] == 'ceilometer' || Type == 'ceilometer_samples' || Type == 'debug'"
 -- message_matcher = "Type == 'ceilometer_samples'"
+message_matcher = "FALSE"
