--- a/conf/hindsight.cfg
+++ b/conf/hindsight.cfg
@@ -10,9 +10,14 @@ io_lua_cpath            = analysis_lua_cpath .. ";/usr/local/lib/luasandbox/io_m
 -- hostname =
 
 input_defaults = {
+    instruction_limit=0,
+    memory_limit=64*1024*1024
 }
 analysis_defaults = {
 }
 output_defaults = {
+    instruction_limit=0,
+    memory_limit=64*1024*1024
 }
+
 
